# crewai_recipe_comic_generator

./: .dockerignore  .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
flask_orchestrator/: Dockerfile  app.py  requirements.txt  routes.py
shared/: constants.py  helpers.py  pydantic_models.py  redis.py
src/crewai_recipe_comic_generator/: comic_gen_models.py  constants.py  crew.py  helpers.py  main.py
workers/comicgen/: ComicGenFlow.py  Dockerfile  comicgen_worker.py  requirements.txt
workers/preprocess/: DockerFile  PreProcessingFlow.py  preprocess_worker.py  requirements.txt
